Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
-
ghx-label-13
Description
Similarly to https://github.com/apache/hive/pull/4910, Impala should have a backend flag to restrict the data file locations of Iceberg tables.
If the flag is true, Impala should raise an error for Iceberg tables that have data files outside of the table directory.
We should not limit the location of metadata files, so they could be placed to a different storage system (e.g. Amazon S3 Express).
We must also ensure that users cannot create Iceberg tables at arbitrary locations.
Attachments
Issue Links
- is related to
-
HIVE-27323 Iceberg: malformed manifest file or list can cause data breach
- Open