IMPALA-12584

Change-Id: I60e3d93b5039dc977417e7b097b3d6ddeda52de4